--- a/angular-frontend/nginx.conf
+++ b/angular-frontend/nginx.conf
@@ -4,7 +4,7 @@ server {
 
     location / {
         proxy_pass http://app-frontend-1:80; 
-        proxy_set_header Host $host; # <--- THIS IS THE CRITICAL LINE 7
+        proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
