--- a/angular-frontend/nginx.conf
+++ b/angular-frontend/nginx.conf
@@ -3,13 +3,18 @@ server {
     server_name localhost;
 
     location / {
-        proxy_pass http://app-frontend-1:80; 
-        # All proxy_set_header lines have been removed to bypass the persistent error.
-        # This will allow Nginx to start.
+        proxy_pass http://app-frontend-1:80;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    location /api {
-        proxy_pass http://suppstore-backend:8080; 
-        # All proxy_set_header lines have been removed to bypass the persistent error.
+    location /api/ {
+        proxy_pass http://suppstore-backend:8080/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
