--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,4 @@
 # .github/workflows/main.yml
-# Final workflow with build-time configuration
-# This is a dummy change to force GitHub to re-read the workflow file - DELETE ME LATER
 name: Build, Push, and Deploy
 
 on:
@@ -80,12 +78,12 @@ jobs:
             fi
             cat nginx.conf
 
-            echo "--- Testing Nginx configuration syntax ---" # <--- THIS IS THE KEY TEST STEP
+            echo "--- Testing Nginx configuration syntax ---"
             docker compose -f docker-compose.prod.yml --env-file .env run --rm nginx-proxy nginx -t || \
             {
                 echo "CRITICAL ERROR: Nginx configuration test failed! See output above for details."
                 docker ps -a | grep app-nginx-proxy-1 && docker logs app-nginx-proxy-1 || true
-                exit 1 # Fail the GitHub Action job if Nginx config is bad
+                exit 1
             }
 
             echo "--- Creating or updating .env file ---"
@@ -99,12 +97,21 @@ jobs:
                 exit 1
             fi
 
+            echo "--- .env file contents ---"
+            cat .env
+
             echo "--- Pulling latest Docker images ---"
             docker compose -f docker-compose.prod.yml --env-file .env pull || { echo "ERROR: docker compose pull command failed."; exit 1; }
 
-            echo "--- Stopping and removing existing services and volumes (force recreate) ---"
-            docker compose -f docker-compose.prod.yml --env-file .env down --remove-orphans -v 2>&1 | tee docker-compose-down.log
+            echo "Waiting 15 seconds for MySQL container to initialize..."
+            sleep 15
+
+            echo "--- Stopping and removing existing services (force recreate) ---"
+            docker compose -f docker-compose.prod.yml --env-file .env down --remove-orphans 2>&1 | tee docker-compose-down.log
             cat docker-compose-down.log
+
+            echo "Waiting 5 seconds before starting services..."
+            sleep 5
 
             echo "--- Bringing up services in detached mode ---"
             docker compose -f docker-compose.prod.yml --env-file .env up -d --force-recreate 2>&1 | tee docker-compose-up.log
